# magma

./: .gitignore  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Dependencies/fmt/: CMakeLists.txt
Dependencies/lodepng/: CMakeLists.txt
Dependencies/sdl2/: CMakeLists.txt
Include/: Backend.h  Console.h  Error.h  Magma.h
Source/: Backend.cc  CMakeLists.txt  Console.cc  Error.cc  Keyboard.h  MemoryBackend.cc  MemoryBackend.h  SDLBackend.cc  SDLBackend.h  input.cc  input.h
